# BasicsOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithms.c  algorithms.h
libs/algorithms/array/: array.c  array.h
libs/algorithms/tasks/: auto_completion.h  binary_tree.h  fill_matrix.h  filter_nums.h  game_life.h  generate_nums.h  get_domains.h  get_submatrix.h  median_filter.h  rearrange_strings.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/product/: productUpdate.c  productUpdate.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
